@@ -186,6 +186,8 @@ namespace TVPredictionsViewer
                 if (File.Exists(Path.Combine(NetworkDatabase.Folder, "Predictions.TVP")))
                     File.SetLastWriteTime(Path.Combine(NetworkDatabase.Folder, "Predictions.TVP"), NetworkDatabase.NetworkList.FirstOrDefault().PredictionTime);
 
+                AllNetworks.IsVisible = true;
+
                 if (!home.Completed)
                     home.CompletedSettings();
                 else
